--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,8 @@ yarn-error.log
 /ios/Pods/
 /vendor/bundle/
 
+/node_modules/*
+./vscode/*
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
